--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,13 @@
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/maker-bundle": "^1.31",
+        "symfony/panther": "^1.0",
         "symfony/runtime": "5.4.*",
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
+        "dbrekelmans/bdi": "^0.3.0"
     },
     "config": {
         "optimize-autoloader": true,
