--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
+        "doctrine/annotations": "^1.13",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.3.1",
@@ -22,7 +23,8 @@
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
-        "dbrekelmans/bdi": "^0.3.0"
+        "dbrekelmans/bdi": "^0.3.0",
+        "symfony/maker-bundle": "^1.31"
     },
     "config": {
         "optimize-autoloader": true,
