--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,18 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.13",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/panther": "^1.0",
         "symfony/runtime": "5.4.*",
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
+        "dbrekelmans/bdi": "^0.3.0",
+        "symfony/maker-bundle": "^1.31"
     },
     "config": {
         "optimize-autoloader": true,
