--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,20 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.2",
+        "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
-        "doctrine/annotations": "^1.13",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.31",
         "symfony/panther": "^1.0",
+        "symfony/property-access": "5.4.*",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
+        "symfony/serializer": "5.4.*",
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
